# django-base-backend

./: LICENSE.txt  README.rst  setup.cfg
base_backend/: README.rst  forms.py  permissions.py  text_utils.py  validators.py
django_base_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
