[metadata]
name = django-base-backend
version = 0.1-alpha3
description = A Django Utilities library.
long_description = file: README.rst
long_description_content_type = text/markdown
author = Simouche
author_email = wassim.chaguetmi@gmail.com
license = MIT
url = https://github.com/Simouche/django-base-backend
classifiers=
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
python_requires='>=3.5'

[options]
include_package_data = true
packages = find:
